package enumclasses;

public enum BreadType {

    //List of breadTypes
    WHEAT,
    WHITE,
    RYE,
    WRAP;
}

