package enumclasses;

public enum SauceFlavor {
    KRABBY_PATTY_FORMULA,
    AU_JUS,
    WORLDS_SPICIEST_HOT_SAUCE,
    MAYO,
    MUSTARD,
    KETCHUP,
    RANCH,
    THOUSAND_ISLAND,
    VINAIGRETTE
}
