package enumclasses;

public enum SideType {
    SALT,
    PEPPER,
    PEPPER_FLAKES
}
