package interfaces;

public interface Price {

    double getPrice();
}
