@startuml
enum EnumClasses.RegularToppings {
+  LETTUCE
+  PEPPERS
+  ONIONS
+  TOMATOES
+  JALEPENOS
+  CUCUMBERS
+  PICKLES
+  GUACAMOLE
+  MUSHROOMS
}

class SuperUberSnackShack.Drink {
~ DrinkSize size
~ DrinkFlavor flavor
+ double getPrice()
+ String toString()
}


enum SuperUberSnackShack.DrinkFlavor {
+  HI_C
+  ROOT_BEER
+  RIG_JUICE
+  BUTTER_BEER
+  HEAL_POTION
}

class ReceiptKeeper.PrintReceipt {
+ {static} void makeReceipt(Orders)
}

class SuperUberSnackShack.CustomerOrder {
~ String customerName
~ String orderNumber
~ String sandwichForOrder
~ boolean sandwichSpecial
~ boolean drink
~ boolean chips
~ boolean sauce
+ String getCustomerName()
+ String getOrderNumber()
+ String getSandwichForOrder()
+ boolean isSandwichSpecial()
+ boolean isDrink()
+ boolean isChips()
+ boolean isSauce()
+ String toString()
}


class SuperUberSnackShack.RegularToppings {
}
enum EnumClasses.BreadType {
+  WHEAT
+  WHITE
+  RYE
+  WRAP
}

class SuperUberSnackShack.Sandwich {
- BreadLength breadLength
- BreadType breadType
- ArrayList<Cheese> cheeses
- ArrayList<Meat> bigMeats
- ArrayList<Topping> toppingList
- SauceFlavor sauceFlavor
- SideType sideType
- boolean toastedSandwich
+ void removeTopping(Topping)
+ void addTopping(Topping)
+ BreadLength getBreadLength()
+ BreadType getBreadType()
+ ArrayList<Cheese> getCheeses()
+ ArrayList<Meat> getBigMeats()
+ ArrayList<Topping> getToppingList()
+ SauceFlavor getSauceFlavor()
+ SideType getSideType()
+ boolean isToastedSandwich()
+ void setBreadLength(BreadLength)
+ void setBreadType(BreadType)
+ void setCheeses(ArrayList<Cheese>)
+ void setBigMeats(ArrayList<Meat>)
+ void setToppingList(ArrayList<Topping>)
+ void setSauceFlavor(SauceFlavor)
+ void setSideType(SideType)
+ void setToastedSandwich(boolean)
}


class SuperUberSnackShack.Cheese {
- Cheese cheeseWanted
+ String toString()
}


enum SuperUberSnackShack.CheeseType {
+  AMERICAN
+  PROVOLONE
+  CHEDDAR
+  SWISS
}

enum EnumClasses.BreadLength {
+  FOUR_INCHES
+  EIGHT_INCHES
+  TWELVE_INCHES
- String breadLength
- double price
+ double getPrice()
+ String getBreadLength()
}


abstract class SuperUberSnackShack.Items {
~ double price
+ {static} void add(Items)
+ double getPrice()
}


enum EnumClasses.DrinkSize {
+  SMALL
+  MEDIUM
+  LARGE
- double price
+ double getPrice()
}


enum EnumClasses.SideType {
+  SALT
+  PEPPER
+  PEPPER_FLAKES
}

class SuperUberSnackShack.Orders {
- double totalOrderPrice
- ArrayList<Items> itemList
+ void addOrderItem(Items)
+ double getTotalOrderPrice()
+ ArrayList<Items> getItemList()
+ double totalPriceOfOrder()
}


class SuperUberSnackShack.SandwichCheeses {
+ double getCheesePrice()
}

enum EnumClasses.SauceFlavor {
+  KRABBY_PATTY_FORMULA
+  AU_JUS
+  WORLDS_SPICIEST_HOT_SAUCE
+  MAYO
+  MUSTARD
+  KETCHUP
+  RANCH
+  THOUSAND_ISLAND
+  VINAIGRETTE
}

class SuperUberSnackShack.Screen.SandwichApplication {
- Scanner user
+ void customerOrderScreen()
+ void createOrderMenu()
+ void checkOutMenu()
+ void sandwichMakerMenu()
+ void breadPicker()
+ void pickTheCheese()
+ void meatPickerMenu()
+ void regularToppingMenu()
+ void sauceMenu()
+ void sideMenu()
+ void drinkMakerMenu()
+ void drinkFlavorPicker()
+ void chipMakerMenu()
}


class SuperUberSnackShack.Meat {
- Meat meatWanted
+ Meat getMeatWanted()
+ double getMeatPrice()
+ String toString()
}


enum SuperUberSnackShack.Meats {
+  STEAK
+  HAM
+  SALAMI
+  ROAST_BEEF
+  CHICKEN
+  BACON
}

class SuperUberSnackShack.SandwichMeat {
+ double getMeatPrice()
}

class InitializeProgram.RunSandwichShop {
+ {static} void main(String[])
}

abstract class SuperUberSnackShack.PremiumToppings {
+ double price
}

interface Interfaces.Price {
~ double getPrice()
}

class SuperUberSnackShack.Chips {
- String chipName
- double price
+ String getChipName()
+ double getPrice()
+ String toString()
}


enum SuperUberSnackShack.ChipFlavor {
+  BBQ
+  SOUR_CREAM_AND_ONION
+  HONEY_BUTTER
+  CLASSIC
+  SALT_AND_VINEGAR
}

class SuperUberSnackShack.Topping {
~ BreadLength breadLength
~ boolean haveExtraToppings
+ double getPrice()
}




SuperUberSnackShack.Items <|-- SuperUberSnackShack.Drink
SuperUberSnackShack.Topping <|-- SuperUberSnackShack.RegularToppings
Interfaces.Price <|.. SuperUberSnackShack.Sandwich
SuperUberSnackShack.Items <|-- SuperUberSnackShack.Sandwich
SuperUberSnackShack.SandwichCheeses <|-- SuperUberSnackShack.Cheese
Interfaces.Price <|.. SuperUberSnackShack.Items
SuperUberSnackShack.PremiumToppings <|-- SuperUberSnackShack.SandwichCheeses
SuperUberSnackShack.SandwichMeat <|-- SuperUberSnackShack.Meat
SuperUberSnackShack.PremiumToppings <|-- SuperUberSnackShack.SandwichMeat
SuperUberSnackShack.Topping <|-- SuperUberSnackShack.PremiumToppings
SuperUberSnackShack.Items <|-- SuperUberSnackShack.Chips
SuperUberSnackShack.Items <|-- SuperUberSnackShack.Topping
@enduml